# PRA-Nexus-trial

./: .gitignore  Dockerfile  implementation_plan.md  next.config.ts  package-lock.json  package.json  scratch_format_log.js  ws-server.mjs
projects/25bf88b0-9fc1-488f-a046-997988e265f1/: meta.json  model.json
projects/25bf88b0-9fc1-488f-a046-997988e265f1/history/: v1.json  v2.json  v3.json  versions.json
projects/e7b6a319-7eca-423d-ace1-c09676f4c985/: meta.json  model.json
projects/e7b6a319-7eca-423d-ace1-c09676f4c985/history/: v1.json  v2.json  v3.json  v4.json  v5.json  versions.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/pitch/: page.tsx
src/components/brand/: QuanticaLogo.tsx
src/components/data/: BasicEventTable.tsx  CCFGroupTable.tsx  EndStateTable.tsx  EventTreeTable.tsx  FaultTreeTable.tsx  FlagGroupTable.tsx  InitiatingEventTable.tsx  ParameterTable.tsx  RecoveryRuleTable.tsx
src/components/editor/: EventTreeCanvas.tsx  FaultTreeCanvas.tsx  ValidationPanel.tsx
src/components/feedback/: FeedbackModal.tsx
src/components/project/: DiffViewer.tsx  ProjectManager.tsx
src/components/results/: AnalysisReport.tsx  QuantificationPanel.tsx  (+3 more)
src/engine/: bdd.ts  etQuantification.ts  et_quant.ts  monte_carlo.ts  post_process.ts  seismic_quant.ts  sensitivity.ts
src/engine/wasm/: Cargo.toml
src/engine/wasm/src/: bdd.rs  lib.rs  monte_carlo.rs
src/lib/: db.ts
src/scripts/: generateLargeModel.mjs  testQuantifyLocal.ts
src/store/: modelStore.ts  projectStore.ts  resultsStore.ts  yjsStore.ts
src/workers/: quant.worker.ts
(+28 files in other folders)
